correction spacing for header

--- a/css/style.css
+++ b/css/style.css
@@ -566,7 +566,6 @@ body {
 }
 .greeting {
   height: 100%;
-  margin-top: -70px;
   display: flex;
   flex-direction: column;
   justify-content: center;
