--- a/less/blocks/greeting.less
+++ b/less/blocks/greeting.less
@@ -1,6 +1,6 @@
 .greeting {
   height: 100%;
-  margin-top: -70px;
+  // margin-top: -70px;
   display: flex;
   flex-direction: column;
   justify-content: center;
